# blink

./: .gitignore  DESIGN.md  FOLDER_STRUCTURE.md  IMPLEMENTATION_NOTES.md  README.md  pyproject.toml  requirements.txt  temp_overlay.py
blink/: __init__.py  __main__.py  app.py
blink/camera/: __init__.py  camera_manager.py  capture_thread.py  frame_queue.py
blink/config/: __init__.py  config_manager.py  defaults.py  settings.py
blink/core/: __init__.py  aggregated_store.py  alert_engine.py  blink_monitor.py  statistics.py  time_trigger.py
blink/threading/: __init__.py  signal_bus.py  vision_worker.py
blink/ui/: __init__.py  main_window.py  screen_overlay.py  settings_dialog.py  tray_icon.py
blink/utils/: __init__.py  diagnostics.py  exceptions.py  logger.py  platform.py  validators.py
blink/vision/: __init__.py  blink_detector.py  eye_analyzer.py  face_detector.py
