[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "blink-eye-health"
version = "0.1.0"
description = "Desktop app for monitoring eye blinking habits with visual reminders"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Blink Team" }
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Desktop Environment",
]
dependencies = [
    "PyQt6>=6.7.0",
    "platformdirs>=4.2.2",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "loguru>=0.7.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-qt>=4.2.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.10.1",
    "black>=24.4.2",
    "ruff>=0.4.7",
]

[project.scripts]
blink = "blink.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["blink*"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
